Funcionalidade de login com validações nas classes de bo, dao, telaLoginGUI; modificações cadFuncionario, CadVenda; novo CriarBanco: em andamento.

--- a/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/acesso/LoginGUI.form
+++ b/davi-calcados-getsoftware/src/br/com/getsoftware/davicalcados/gui/acesso/LoginGUI.form
@@ -243,6 +243,9 @@
               <Font name="Tahoma" size="20" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jPasswordField1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
